<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.database.BookFragment"
    android:padding="12dp">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="20dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_fragment_title_key"
            android:layout_marginEnd="40dp" />

        <EditText
            android:id="@+id/text_edit_title"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/default_title"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#757575" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/book_fragment_author_key" />

        <TextView
            android:id="@+id/text_view_author_name"
            android:layout_width="220dp"
            android:layout_height="match_parent"
            android:hint="@string/hint_authorname"
            android:textColorHint="#757575" />
    </TableRow>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:src="@drawable/ic_baseline_save_24"
        android:contentDescription="@string/submit" />


</TableLayout>

